# stereopticon

./: .gitmodules  README.md  build.sh  common.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt  main.cpp  rdpserver.cpp  rdpserver.h
src/common/: guestpixelbuffer.h  transport.h
src/common/receiver/: guestpixelbufferreceiver.hpp
src/common/sender/: guestpixelbuffersender.hpp
src/common/transports/: sharedmemtransport.hpp
src/guest/: CMakeLists.txt  main.cpp  window_manager.cpp  window_manager.h
src/guest/common/receiver/: guestpixelbufferreceiver.hpp
src/guest/common/sender/: guestpixelbuffersender.hpp
src/host/: CMakeLists.txt  main.cpp  pixelreceiver.cpp  pixelreceiver.h  windowpainter.cpp  windowpainter.h
